# desmoxide

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: simplex.rs
src/: ast.rs  compile.rs  interop.rs  lang.rs  lexer.rs  lib.rs  main.rs  test.json  tests.rs  util.rs
src/ast/: expression.rs  expression_manager.rs  lexer.rs  mod.rs  node.rs  opcodes.rs  parse_manager.rs  parser.rs
src/compile/: ast_visitor.rs  backends.rs  frontend.rs  ir.rs  mod.rs  optimize.rs
src/compile/ir/: mod.rs
src/compile/optimize/: disjoint_set.rs  egraph.rs  term.rs
src/graph/: expressions.rs
src/interop/: graph_state.rs  mod.rs
src/ir/: mod.rs  types.rs
src/lang/: ast.rs  compiler.rs  expression_provider.rs  lexer.rs  parser.rs
src/lang/compiler/: backends.rs  expression_provider.rs  frontend.rs  ir.rs  value.rs
src/lang/compiler/backends/: interpreter.rs
src/render/: mod.rs
src/util/: macros.rs  mod.rs  multipeek.rs  thin_str.rs
tests/: listmul.json  simplex.json
