[package]
name = "desmoparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
egg = "0.9.5"
logos = "0.13.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.107"
thin-vec = "0.2.12"
