[package]
name = "desmoxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
debug_tree = "0.4.0"
egg = "0.9.5"
nohash-hasher = "0.2.0"
logos = "0.14.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
thin-vec = "0.2.12"
arc-swap = "1.7.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "simplex"
harness = false
