[package]
name = "desmoxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
debug_tree = "0.4.0"
logos = "0.14.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.26.2", features = ["derive"] }
thin-vec = "0.2.12"
shrinkwraprs = "0.3.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "simplex"
harness = false
